sort.basic.shell.AlgShellSort.scala.error
Erreur de compilation :
AlgShellSort:3: error: not found: value getnombreValeurs
  var ecart: Int=getnombreValeurs()/2
                 ^AlgShellSort:17: error: not found: value ecart
    for (j<- i-ecart to 0 by -ecart){
               ^AlgShellSort:17: error: not found: value ecart
    for (j<- i-ecart to 0 by -ecart){
                              ^